updated all source files to be consistent with those provided by TA in email

--- a/fsv5d/src/Makefile
+++ b/fsv5d/src/Makefile
@@ -1,7 +1,7 @@
 
 
 eins.out: eins.tlt scanner 
-	scanner < eins.tlt > eins.out
+	./scanner < eins.tlt > eins.out
 
 lex.yy.o:  lex.yy.c token.h symtab.h
 	gcc -c lex.yy.c
