Added new lex file, and changed Makefile

--- a/fsv5d/src/Makefile
+++ b/fsv5d/src/Makefile
@@ -6,8 +6,8 @@ eins.out: eins.tlt scanner
 lex.yy.o:  lex.yy.c token.h symtab.h
 	gcc -c lex.yy.c
 
-lex.yy.c: turtle.l
-	flex turtle.l
+lex.yy.c: turtle_fsv5d.l
+	flex turtle_fsv5d.l
 	
 scanner:  lex.yy.o symtab.c
 	gcc lex.yy.o symtab.c -lfl -o scanner 
