--- a/fsv5d/src/Makefile
+++ b/fsv5d/src/Makefile
@@ -1,17 +1,27 @@
 
+all: turtle eins.ps
 
-eins.out: eins.tlt scanner 
-	./scanner < eins.tlt > eins.out
+eins.ps: eins.tlt turtle
+	./turtle < eins.tlt > eins.ps
 
-lex.yy.o:  lex.yy.c token.h symtab.h
+lex.yy.o:  lex.yy.c turtle_fsv5d.tab.h symtab.h
 	gcc -c lex.yy.c
 
 lex.yy.c: turtle_fsv5d.l
 	flex turtle_fsv5d.l
 	
-scanner:  lex.yy.o symtab.c
-	gcc lex.yy.o symtab.c -lfl -o scanner 
+turtle_fsv5d.tab.h: turtle_fsv5d.y
+	bison -d turtle_fsv5d.y
+	
+turtle_fsv5d.tab.c: turtle_fsv5d.y
+	bison -d turtle_fsv5d.y
+	
+turtle_fsv5d.tab.o: turtle_fsv5d.tab.c symtab.h
+	gcc -c turtle_fsv5d.tab.c
+
+turtle: turtle_fsv5d.tab.o lex.yy.o symtab.c
+	gcc lex.yy.o turtle_fsv5d.tab.o symtab.c -lfl -o turtle
 
 clean:
-	rm -f scanner lex.* 
+	rm -f turtle lex.* turtle.tab.* *.o eins.ps
 
